<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/dp10"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imv_image"
        android:layout_width="162dp"
        android:layout_height="108dp"
        android:src="@drawable/rectangle_2"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        tools:text="@string/title_speical1" />

    <TextView
        android:id="@+id/tv_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGrey"
        android:textSize="15sp"
        tools:text="@string/place1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_pice_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPink"
            android:textSize="@dimen/sp11"
            tools:text="@string/pice_discount21" />

        <TextView
            android:id="@+id/tv_pice"
            style="@style/TextStyle22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/pice21" />
    </LinearLayout>
</LinearLayout>

