<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/dp10"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/recommendation_banner_1"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/sp13"
        tools:text="@string/title_hot_today" />

    <TextView
        android:id="@+id/tv_pice_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp17"
        tools:text="@string/pice_discount1" />

    <TextView
        android:id="@+id/tv_pice"
        android:layout_width="@dimen/dp350"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/sp15"
        tools:text="@string/pice1" />
</LinearLayout>

