<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Selection">

    <include layout="@layout/title_top"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/hot_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:text="@string/hot_today"
                        android:textColor="@color/colorBlack"
                        android:layout_marginTop="@dimen/dp27"
                        android:textSize="@dimen/sp21"
                        tools:ignore="RelativeOverlap" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/dp20"
                        android:orientation="horizontal"
                        tools:ignore="RelativeOverlap">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/one"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/sp17"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/five"
                            android:textSize="@dimen/sp15" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/most_popular"
                    android:textColor="@color/colorGrey"
                    android:layout_marginBottom="@dimen/dp20"
                    android:textSize="@dimen/sp15" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_hot_today"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:scrollbars="horizontal">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp2"
                android:background="@color/colorGrey_two"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp20"
                android:layout_marginBottom="@dimen/dp10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp20"
                    android:gravity="center_horizontal"
                    android:text="@string/categories"
                    android:textColor="@color/colorGrey_three"
                    android:textSize="@dimen/sp17" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    android:baselineAligned="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/restaurant_icon"
                        android:layout_marginEnd="@dimen/dp20"
                        android:gravity="center_horizontal|center"
                        android:textSize="@dimen/sp13"
                        android:textColor="@color/charcoal"
                        android:text="@string/restaurant" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/wine_icon"
                        android:layout_marginEnd="@dimen/dp20"
                        android:gravity="center_horizontal|center"
                        android:textSize="@dimen/sp13"
                        android:textColor="@color/charcoal"
                        android:text="@string/wine" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/quick_fix_icon"
                        android:layout_marginEnd="@dimen/dp20"
                        android:gravity="center_horizontal|center"
                        android:textSize="@dimen/sp13"
                        android:textColor="@color/charcoal"
                        android:text="@string/quick_fix" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/dessert_icon"
                        android:layout_marginEnd="@dimen/dp20"
                        android:gravity="center_horizontal|center"
                        android:textSize="@dimen/sp13"
                        android:textColor="@color/charcoal"
                        android:text="@string/dessert" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/coffee_icon"
                        android:layout_marginEnd="@dimen/dp20"
                        android:gravity="center_horizontal|center"
                        android:textSize="@dimen/sp13"
                        android:textColor="@color/charcoal"
                        android:text="@string/coffee" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp2"
                android:layout_marginBottom="@dimen/dp27"
                android:background="@color/colorGrey_two"
                android:layout_marginEnd="@dimen/dp20"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city_guide"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp21" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we_hand_picked"
                    android:textColor="@color/colorGrey"
                    android:layout_marginBottom="@dimen/dp20"
                    android:textSize="@dimen/sp15" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:scrollbars="horizontal">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp2"
                android:layout_marginEnd="@dimen/dp20"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginBottom="@dimen/dp27"
                android:background="@color/colorGrey_two" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/specail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speical_offers"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/sp21" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/dp20"
                        android:text="@string/view_more"
                        android:textColor="@color/colorRed"
                        android:textSize="@dimen/sp13"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/awesome"
                    android:textColor="@color/colorGrey"
                    android:layout_marginBottom="@dimen/dp20"
                    android:textSize="@dimen/sp15" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_speical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp2"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:background="@color/colorGrey_two" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginTop="@dimen/dp25"
                    android:layout_marginBottom="@dimen/dp20"
                    android:gravity="start|center"
                    android:text="@string/columns"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp21" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp2"
                    android:layout_marginEnd="@dimen/dp20"
                    android:background="@color/colorGrey_two" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_colums"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical">
                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp108" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp2"
        android:layout_marginBottom="5dp"
        android:background="@color/colorGrey_two"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/dp0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:weightSum="5"
        android:baselineAligned="false">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/star_favorite_1498"
            android:layout_marginEnd="@dimen/dp20"
            android:gravity="center_horizontal|center"
            android:textSize="@dimen/sp10"
            android:textColor="@color/charcoal"
            android:text="@string/select" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/shop_center_round_1140"
            android:layout_marginEnd="@dimen/dp20"
            android:gravity="center_horizontal|center"
            android:textSize="@dimen/sp10"
            android:textColor="@color/charcoal"
            android:text="@string/store" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/book_1207"
            android:layout_marginEnd="@dimen/dp20"
            android:gravity="center_horizontal|center"
            android:textSize="@dimen/sp10"
            android:textColor="@color/charcoal"
            android:text="@string/magazine" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/cart_round_1169"
            android:layout_marginEnd="@dimen/dp20"
            android:gravity="center_horizontal|center"
            android:textSize="@dimen/sp10"
            android:textColor="@color/charcoal"
            android:text="@string/cart" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/profile_round_1342"
            android:layout_marginEnd="@dimen/dp20"
            android:gravity="center_horizontal|center"
            android:textSize="@dimen/sp10"
            android:textColor="@color/charcoal"
            android:text="@string/me" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>